<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_login" >

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUserName"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textWebPassword" />

    <RadioGroup
        android:id="@+id/rgIdentity"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbStudent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/student" />

        <RadioButton
            android:id="@+id/rbTeacher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/teacher" />
    </RadioGroup>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rgIdentity"
        android:layout_marginTop="15dp"
        android:text="@string/login"
        android:textSize="@dimen/text_size" />

</RelativeLayout>