<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_login"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/etStartDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/application_start_date"
            android:textSize="@dimen/text_size" >
        </EditText>

        <EditText
            android:id="@+id/etOverDate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/row_layout_margin_top"
            android:editable="false"
            android:hint="@string/application_over_date"
            android:textSize="@dimen/text_size" >
        </EditText>

        <EditText
            android:id="@+id/etLeavePlace"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/row_layout_margin_top"
            android:hint="@string/leave_place"
            android:textSize="@dimen/text_size" >
        </EditText>

        <EditText
            android:id="@+id/etLeaveReason"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/row_layout_margin_top"
            android:gravity="top"
            android:hint="@string/leave_reason"
            android:inputType="textMultiLine"
            android:minLines="3"
            android:textSize="@dimen/text_size" >
        </EditText>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/row_layout_margin_top"
            android:paddingLeft="@dimen/tv_padding_left"
            android:text="@string/choose_approver"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size" >
        </TextView>

        <Spinner
            android:id="@+id/spinTname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size" >
        </Spinner>

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/row_layout_margin_top"
            android:text="@string/apply"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

</ScrollView>