<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_login" >

    <EditText
        android:id="@+id/etUpdatePwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/new_password"
        android:inputType="textWebPassword" />

    <EditText
        android:id="@+id/etUpdateConfirmPwd"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUpdatePwd"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_new_password"
        android:inputType="textWebPassword" />

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUpdateConfirmPwd"
        android:layout_marginTop="15dp"
        android:text="@string/confirm"
        android:textSize="@dimen/text_size" />

</RelativeLayout>