<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/rgConfirmMark"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rbAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="@string/agree" />

        <RadioButton
            android:id="@+id/rbDisagree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/disagree" />
    </RadioGroup>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_marginTop="15dp"
        android:background="@android:color/darker_gray" />

    <EditText
        android:id="@+id/etConfirmReply"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/approve_reply_duplicate"
        android:minLines="3" >
    </EditText>

</LinearLayout>