<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_login"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/tvTname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/is_manager"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/tvIsManager"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/faculty"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/tvFname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/level"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/tvLname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/is_teacher"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/tvIsTeacher"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/teach_course"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:id="@+id/llytTeachCourse"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:layout_marginTop="15dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/teach_class"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size" />

        <LinearLayout
            android:id="@+id/llytTeachClass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

</ScrollView>